Fix Chrome slider height overflow
The sliders in Chrome were overflowing the assigned height and causing
weird dragging behavior.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+/* Fix for Chrome slider height overflow */
+input[type='range'] {
+  flex-direction: initial !important;
+}
+
 /* Config */
 :root {
   --sk-size: 5px;
